<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- using in UI -->
    <string name="app_name">中华书画</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="album_title">专辑名称</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="album_intro">专辑介绍</string>
    <string name="create_time">创建时间</string>
    <string name="page_index">0/0</string>
    
    <!-- using in code -->
    <string name="picture_count">图</string>
    <string name="year">年</string>
    <string name="year_from_then">距今</string>
    <string name="text_separator">|</string>
    

</resources>