<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:padding="15dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/album_up"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_title"
                android:textColor="@color/album_title"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@color/album_meta" >

                <TextView
                    android:id="@+id/create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time"
                    android:textColor="@color/album_meta"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/album_meta"
                    android:text="@string/text_separator"
                    android:paddingLeft="5dp" 
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/picture_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/album_meta"
                    android:textSize="12sp"
                    android:text="@string/picture_count" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:background="@color/album_down"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/album_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_intro"
                android:textColor="@color/album_intro"
                android:textSize="14sp" />
        </LinearLayout>

</RelativeLayout>