<com.ht.huaxin.view.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/picture_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/page_index" />

        <com.ht.huaxin.view.ShaderView
            android:id="@+id/picture_img"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:longClickable="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/picture_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_title" />

        <TextView
            android:id="@+id/picture_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_title" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="分享" />

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button1"
                android:text="下载" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</com.ht.huaxin.view.MyScrollView>